--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,8 +23,8 @@
 
 <p><%= submit_tag 'Sign up' %></p>
 
-<p>or register with Facebook connect</p>
-<%= fb_login_button('window.location = "/users/link_user_accounts";')%>
+<!-- <p>or register with Facebook connect</p> -->
+<!-- <%= fb_login_button('window.location = "/users/link_user_accounts";')%> -->
 
 
 <% end -%>
