--- a/app/views/tasks/fail.html.erb
+++ b/app/views/tasks/fail.html.erb
@@ -66,7 +66,7 @@
 
   function checkOff(taskId) {
     new Ajax.Request('/tasks/finish/' + taskId, { method: 'put' });
-      window.location.replace("http://localhost:3000");
+      window.location.replace("/");
   }
 </script>
 
